--- a/build.gradle
+++ b/build.gradle
@@ -105,8 +105,11 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:$minecraft_version-$forge_version"
-    compileOnly fg.deobf("mezz.jei:jei-$minecraft_version:$jei_version:api")
-    runtimeOnly fg.deobf("mezz.jei:jei-$minecraft_version:$jei_version")
+
+    compileOnly(fg.deobf("mezz.jei:jei-$minecraft_version-common-api:$jei_version"))
+    compileOnly(fg.deobf("mezz.jei:jei-$minecraft_version-forge-api:$jei_version"))
+    runtimeOnly(fg.deobf("mezz.jei:jei-$minecraft_version-forge:$jei_version"))
+
 }
 
 jar {
