--- a/run_server/server.properties
+++ b/run_server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri May 27 09:42:43 WEST 2022
+#Fri Jan 13 11:24:57 WET 2023
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -10,6 +10,7 @@ enable-jmx-monitoring=false
 enable-query=false
 enable-rcon=false
 enable-status=true
+enforce-secure-profile=true
 enforce-whitelist=false
 entity-broadcast-range-percentage=100
 force-gamemode=false
@@ -19,9 +20,12 @@ generate-structures=true
 generator-settings={}
 hardcore=false
 hide-online-players=false
+initial-disabled-packs=
+initial-enabled-packs=vanilla
 level-name=world
 level-seed=
 level-type=default
+max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
