--- a/run_server/server.properties
+++ b/run_server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Jan 13 11:24:57 WET 2023
+#Thu Feb 23 23:00:14 WET 2023
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -35,6 +35,7 @@ online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
+previews-chat=false
 pvp=true
 query.port=25565
 rate-limit=0
